# display3d

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
resources/: blahaj.mtl  blahaj.stl  shapes.stl  triangles.mtl
src/: config.rs  convert_to_mesh3d.rs  display_model.rs  init.rs  lib.rs  main.rs  obj_to_mesh3d.rs  shaders.rs
src/convert_to_mesh3d/: obj.rs  stl.rs
src/display_model/: debug_manager.rs
src/init/: config.rs  convert_to_mesh3d.rs
src/init/convert_to_mesh3d/: obj.rs  stl.rs
