[package]
name = "display3d"
description = "A tool to display 3d objects in the terminal"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
gemini-engine = "0.10.3"
stl_io = "0.7.0"
tobj = "4.0.0"
