[package]
name = "display3d"
description = "A tool to display 3d objects in the terminal"
version = "0.1.13"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redpenguinyt/display3d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
ctrlc = "3.4.2"
gemini-engine = "0.14.2"
stl_io = "0.7.0"
tobj = "4.0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
